<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    >

    <LinearLayout
        android:id="@+id/LayoutDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
        android:id="@+id/ImageViolation"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/icon1"
            android:contentDescription="@string/violation_type" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/description"
                android:textColor="#9a9a9a"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextSetDescription"
                android:layout_width="300dp"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:text="@string/noncrit"
                android:textColor="#9a9a9a"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>



    <LinearLayout
        android:id="@+id/LayoutSeverity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ImageSeverity"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/icon1"
            android:contentDescription="@string/severity_icon" />

        <TextView
            android:id="@+id/TextSetSeverity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/severity"
            android:textColor="#9a9a9a"
            android:textSize="14sp"
            android:textStyle="bold" />



    </LinearLayout>

</LinearLayout>

