<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    >

    <ImageView
        android:id="@+id/hazard_level"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/icon" />

    <LinearLayout
        android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/details_Crit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/crit"
            android:textColor="#9a9a9a"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/details_NonCrit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/noncrit"
            android:textColor="#9a9a9a"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/details_howLong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/how_long_ago"
            android:textColor="#9a9a9a"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hazard_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="hazard"
            android:textColor="#9a9a9a"
            android:textSize="14sp"
            android:textStyle="bold" />



    </LinearLayout>

</LinearLayout>

